* Blog layout must be the same height as the other layouts to avoid scrollbars

--- a/public/css/grid.mobile.phone.scss
+++ b/public/css/grid.mobile.phone.scss
@@ -81,3 +81,7 @@ form {
 .col-phone-12 {
   width: 100%;
 }
+
+.phone-hidden {
+  display: none !important;
+}
